fix: action card right region text align

--- a/assets/components/src/action-card/style.scss
+++ b/assets/components/src/action-card/style.scss
@@ -99,12 +99,17 @@
 		align-items: flex-start;
 		flex-direction: column;
 		margin-top: 24px;
+		text-align: right;
 
 		@media screen and ( min-width: 744px ) {
 			align-items: flex-end;
 			flex-direction: column;
 			margin-left: 24px;
 			margin-top: 0;
+		}
+
+		> * {
+			text-align: inherit;
 		}
 	}
 
